--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,134 @@
+@font-face {
+  font-family: "Bebas Neue Cyrillic";
+  src: local("Bebas Neue Cyrillic"), url("../fonts/BebasNeueRegular.woff2") format("woff2"),
+    url("../fonts/BebasNeueRegular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .header {
-    background-color: #635854;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border-bottom: 4px solid #3596f5;
+  background-color: #635854;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-bottom: 4px solid #3596f5;
 }
 
 .navbar {
-    max-width: 1280px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  max-width: 1280px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar-menu {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  text-align: center;
 }
 
 .navbar-item {
-    margin-left: 40px;
-    margin-right: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .navbar-link {
-    text-decoration: none;
-    color: #fff;
+  text-decoration: none;
+  color: #fff;
 }
 
 .navbar-contacts {
-    text-align: right;
+  text-align: right;
 }
 .contacts-text {
-    display: block;
-    color: #fff;
-    margin-bottom: 4px;
-    font-size: 14px;
-    line-height: 16px;
+  display: block;
+  color: #fff;
+  margin-bottom: 4px;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 .navbar-phone {
-    font-weight: bold;
-    font-size: 17px;
-    line-height: 20px;
-    color: #fff;
-    text-decoration: none;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.main
+{
+  max-width: 1280px;
+  margin: auto;
+  padding-top: 54px;
+  display: flex;
+}
+.main-info{
+  flex-grow: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 66px 0px;
+}
+.home-image path{
+  opacity: 0;
+}
+
+.home-image path:hover{
+  opacity: 1;
+  cursor: pointer;
+}
+
+.counter-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.counter-button{
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.counter-arrow-down{
+  transform: rotateX(180deg);
+}
+
+.main-title{
+  font-family: 'Bebas Neue Cyrillic', 'sans-serif';
+  font-weight: normal;
+  font-size: 37px;
+  line-height: 37px;
+  color: #635854;
+  margin: 0;
+}
+
+.counter{
+  color: #635854;
+  font-family: 'Bebas Neue Cyrillic', 'sans-serif';
+  font-size: 124px;
+}
+
+.button-primary{
+  background: #3596F5;
+  border-radius: 6px;
+  color: #fff;
+  border: none;
+  padding:16px 36px;
+  cursor: pointer;
 }
