--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,10 @@ body {
   cursor: pointer;
 }
 
+path.current-floor{
+  opacity: 1;
+}
+
 .counter-group{
   display: flex;
   flex-direction: column;
@@ -132,3 +136,4 @@ body {
   padding:16px 36px;
   cursor: pointer;
 }
+
