add modal window

--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,91 @@ path.current-floor{
   cursor: pointer;
 }
 
+.modal{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.2s;
+}
+
+.modal-dialog{
+  position: relative;
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  flex-grow: 1;
+  display: flex;
+}
+
+.is-open{
+  opacity: 1;
+  transform: scale(1);
+}
+
+.modal-image{
+  background: #ebebeb;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+
+.modal-title{
+font-family: Bebas Neue;
+
+font-size: 24px;
+line-height: 24px;
+}
+
+.modal-info{
+  width: 40%;
+  padding: 50px 46px;
+}
+
+.flat-list{
+  padding: 0;
+  list-style: none;
+  margin-top: 55px;
+  
+}
+.flat-item{
+  margin-bottom: 15px;
+}
+
+.flat-link{
+  color: #635854;
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.flat-link:hover
+{
+  color: #3596F5;
+  text-decoration: underline;
+}
+
+.modal-alert{
+  font-style: italic;
+font-weight: normal;
+font-size: 16px;
+line-height: 19px;
+margin-top: 56px;
+}
+
+.modal-close-button{
+  position: absolute;
+  right: 27px;
+  top: 38px;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+}
